terraform/0 - vpc.tf
resource "aws_vpc" "main" {
  cidr_block           = var.vpc_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "tech-challenge-VPC"
  }
}
